Fix chrome animation and polish Colours/contrasting

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,10 +12,6 @@ body {
   min-height: 100vh;
 }
 
-.letter {
-  font-size: 150px;
-}
-
 .flex {
   display: flex;
 }
